--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: article) do |form| %>
+<%= form_with(model: article, data: {controller: 'nested-form', 
+    nested_form_wrapper_selector_value: '.nested-form-wrapper'}) do |form| %>
   <% if article.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
@@ -31,14 +32,16 @@
     <%= form.text_field :universidade %>
   </div>
 
+  <br>
   <div>
     <template data-nested-form-target="template">
       <%= form.fields_for :keywords, Keyword.new, child_index: 'NEW_RECORD' do |keyword_fields| %>
-        <%= render "keyword_form" f: keyword_fields %> 
+        <%= render "keyword_form", f: keyword_fields %> 
       <% end %>
     </template>
+
 		<%= form.fields_for :keywords do |keyword_fields| %>
-      <%= render "keyword_form" f: keyword_fields %> 
+      <%= render "keyword_form", f: keyword_fields %> 
     <% end %>
 
     <!--Inserted elements will be injected before that target. -->
@@ -49,6 +52,6 @@
 
   <br>
   <div>
-    <%= form.submit %>
+    <%= form.submit 'Save' %>
   </div>
 <% end %>
